# WhisperWave_Queue

./: Dockerfile  Dockerfile.rabbitmq  README.md  docker-compose.yml  pyproject.toml
my_queue/: start.py
my_queue/controllers/: queue_controller.py  rabbit_controller.py
my_queue/core/: message.py  queue.py  rabbit.py  singleton_queue.py
my_queue/web/: app.py  erros.py  routes.py
tests/core/: test_queue.py
